# IntermodalFreightEnv

./: .gitignore  Dockerfile  HUGGINGFACE_SPACE_SETUP.md  MANUAL_TESTING.sh  MATHEMATICAL_VERIFICATION_COMPLETE.md  OPTIMIZATION_COMPLETE.md  PERMANENT_SOLUTION_DEPLOYED.md  PHASE_3_SUMMARY.md  QUESTIONS_ANSWERED.md  QUICK_REFERENCE.sh  QUICK_REFERENCE_CARD.md  README.md  SUBMISSION_READY.md  TESTING_AUDIT_REPORT.md  TESTING_CHEATSHEET.md  TESTING_RESULTS.md  VERIFICATION_COMPLETE.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh  test_core_systems.py  test_endpoints.sh  verify_env_learning.py  verify_hackathon_checklist.py  verify_permanent_solution.py  verify_submission.py  verify_submission.sh
_reference/: FINAL_MATH_VERIFICATION.py  README.md  verify_math_logic.py
app/: __init__.py  constants.py  exceptions.py  main.py
app/api/: __init__.py  grader.py  schemas.py
app/engine/: __init__.py  core_env.py  graph.py
app/utils/: __init__.py  helpers.py  logger.py
baseline/: __init__.py  agent.py  run_baseline.py
config/: openenv.yaml
docs/: AGENT_LEARNING_ENVIRONMENT.md  AGENT_LEARNING_GUIDE.md  AGENT_LEARNING_OPTIMIZATION_SUMMARY.md  AGENT_QUICK_START.md  API_AND_LEARNING_STATUS.md  API_INFRASTRUCTURE.md  API_SUMMARY.md  BASELINE_AND_GRADER.md  CLEAN_CODE_REFACTORING.md  CODE_ANALYSIS_REPORT.md  CORE_SYSTEMS.md  FINAL_OPTIMIZATION_REPORT.md  FRONTEND_QUICK_START.md  FRONTEND_SETUP.md  HACKATHON_CHECKLIST.md  HACKATHON_PRE_SUBMISSION.md  HACKATHON_STATUS.md  LEARNING_ENVIRONMENT_CHECKLIST.md  LIVE_TESTING.md  MANUAL_TESTING.md  MANUAL_VERIFICATION_GUIDE.md  MATH_TESTING_QUICK_REFERENCE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE.md  PROJECT_TESTING_SUMMARY.md  QUICK_START_SUBMISSION.md  SCORE_TEST.md  SCORING_EXPLAINED.md  SUBMISSION_CHECKLIST.md  SUBMISSION_READY.md  Scaler School of Technology  TESTING_GUIDE.md  TESTING_MATHEMATICS.md  TESTING_ORGANIZATION.md  TESTING_RESULTS_MATH.md  TRANSPORTATION_MODES.md
frontend/: README.md  agent_analytics.py  dashboard.py  requirements.txt
scripts/: debug_agent_learning.py  run_all_math_tests.py  view_value_results.py
server/: __init__.py  app.py
tests/: test_api_layer.py  test_core_environment.py  test_core_systems.py  test_environment_logic.py  test_mathematics.py  test_regressions.py  test_task_types.py  validate_math.py  verify_checklist.py
